--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "postcss-adaptive": "^0.5.0",
     "vant": "^2.2.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
