--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "dayjs": "^1.8.16",
     "postcss-adaptive": "^0.5.0",
     "vant": "^2.2.2",
     "vue": "^2.6.10",
