--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "dayjs": "^1.8.16",
+    "json-bigint": "^0.3.0",
     "postcss-adaptive": "^0.5.0",
     "vant": "^2.2.2",
     "vue": "^2.6.10",
