--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "dayjs": "^1.8.16",
     "json-bigint": "^0.3.0",
     "postcss-adaptive": "^0.5.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "uws": "^100.0.1",
     "vant": "^2.2.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
