--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@better-scroll/scroll-bar": "^2.0.0-beta.2",
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.0",
+    "better-scroll": "^2.0.0-beta.2",
     "core-js": "^2.6.5",
     "dayjs": "^1.8.16",
     "json-bigint": "^0.3.0",
